# crawl-rice

./: README.md  pyproject.toml
data/: raw_rice.csv
src/: main.py
src/crawl_rice/: __init__.py
