[project]
name = "crawl-rice"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kmotobu", email = "62973326+kmotobu@users.noreply.github.com" }
]
dependencies = [
    "pandas>=2.0",
    "requests>=2.31",
    "bs4>=0.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
app = "python ./src/main.py"
